--- a/Marvel Characters/Base.lproj/Main.storyboard
+++ b/Marvel Characters/Base.lproj/Main.storyboard
@@ -1,26 +1,89 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15A278b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15A278b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="VdB-BG-JjF">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--CharacterCDCVC-->
+        <scene sceneID="z61-bh-TjU">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                <collectionViewController id="TlK-qD-mbB" customClass="CharacterCDCVC" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="Na9-sE-J3U">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="qTs-l6-UUW">
+                            <size key="itemSize" width="50" height="50"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Character Cell" id="s3M-JR-XwE">
+                                <rect key="frame" x="0.0" y="64" width="160" height="160"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="0.0" y="0.0" width="160" height="160"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="V95-zT-T0U">
+                                            <rect key="frame" x="0.0" y="0.0" width="160" height="130"/>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Q1X-HQ-2qs">
+                                            <rect key="frame" x="8" y="131" width="144" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                </view>
+                                <constraints>
+                                    <constraint firstItem="Q1X-HQ-2qs" firstAttribute="leading" secondItem="s3M-JR-XwE" secondAttribute="leadingMargin" id="MRd-lP-3C9"/>
+                                    <constraint firstAttribute="bottomMargin" secondItem="V95-zT-T0U" secondAttribute="bottom" constant="22" id="QIH-w7-juZ"/>
+                                    <constraint firstItem="Q1X-HQ-2qs" firstAttribute="top" secondItem="V95-zT-T0U" secondAttribute="bottom" constant="1" id="RHV-j4-bYd"/>
+                                    <constraint firstItem="V95-zT-T0U" firstAttribute="leading" secondItem="s3M-JR-XwE" secondAttribute="leadingMargin" constant="-8" id="TXC-GU-G0f"/>
+                                    <constraint firstItem="Q1X-HQ-2qs" firstAttribute="trailing" secondItem="s3M-JR-XwE" secondAttribute="trailingMargin" id="WCX-L1-iYt"/>
+                                    <constraint firstItem="Q1X-HQ-2qs" firstAttribute="bottom" secondItem="s3M-JR-XwE" secondAttribute="bottomMargin" id="bUd-N9-BLe"/>
+                                    <constraint firstAttribute="trailingMargin" secondItem="V95-zT-T0U" secondAttribute="trailing" constant="-8" id="eqe-F2-6J5"/>
+                                    <constraint firstItem="V95-zT-T0U" firstAttribute="top" secondItem="s3M-JR-XwE" secondAttribute="topMargin" constant="-8" id="xbx-Yq-xdp"/>
+                                </constraints>
+                                <size key="customSize" width="160" height="160"/>
+                            </collectionViewCell>
+                        </cells>
+                        <connections>
+                            <outlet property="dataSource" destination="TlK-qD-mbB" id="Wi4-Ed-yt9"/>
+                            <outlet property="delegate" destination="TlK-qD-mbB" id="CEr-iG-nr3"/>
+                        </connections>
+                    </collectionView>
+                    <navigationItem key="navigationItem" id="16e-eN-Iry"/>
+                    <connections>
+                        <outlet property="characterImageView" destination="V95-zT-T0U" id="UFJ-f1-7XU"/>
+                        <outlet property="characterName" destination="Q1X-HQ-2qs" id="2Rc-qH-rSk"/>
+                    </connections>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="v4u-fL-clt" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="796" y="509"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="t1x-HY-tNj">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="VdB-BG-JjF" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="AZj-5N-rb9">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="TlK-qD-mbB" kind="relationship" relationship="rootViewController" id="42N-iQ-Eg4"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ciz-Qr-big" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="72" y="509"/>
         </scene>
     </scenes>
 </document>
