--- a/Marvel Characters/Base.lproj/Main.storyboard
+++ b/Marvel Characters/Base.lproj/Main.storyboard
@@ -13,25 +13,26 @@
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="Na9-sE-J3U">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="qTs-l6-UUW">
-                            <size key="itemSize" width="50" height="50"/>
+                            <size key="itemSize" width="273" height="260"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Character Cell" id="s3M-JR-XwE">
-                                <rect key="frame" x="0.0" y="64" width="160" height="160"/>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Character Cell" id="s3M-JR-XwE" customClass="CharacterCDCVCC">
+                                <rect key="frame" x="0.0" y="64" width="273" height="260"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                    <rect key="frame" x="0.0" y="0.0" width="160" height="160"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="273" height="260"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="V95-zT-T0U">
-                                            <rect key="frame" x="0.0" y="0.0" width="160" height="130"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="273" height="231"/>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Q1X-HQ-2qs">
-                                            <rect key="frame" x="8" y="131" width="144" height="21"/>
+                                            <rect key="frame" x="8" y="239" width="257" height="21"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
@@ -40,16 +41,20 @@
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 </view>
                                 <constraints>
-                                    <constraint firstItem="Q1X-HQ-2qs" firstAttribute="leading" secondItem="s3M-JR-XwE" secondAttribute="leadingMargin" id="MRd-lP-3C9"/>
-                                    <constraint firstAttribute="bottomMargin" secondItem="V95-zT-T0U" secondAttribute="bottom" constant="22" id="QIH-w7-juZ"/>
-                                    <constraint firstItem="Q1X-HQ-2qs" firstAttribute="top" secondItem="V95-zT-T0U" secondAttribute="bottom" constant="1" id="RHV-j4-bYd"/>
-                                    <constraint firstItem="V95-zT-T0U" firstAttribute="leading" secondItem="s3M-JR-XwE" secondAttribute="leadingMargin" constant="-8" id="TXC-GU-G0f"/>
-                                    <constraint firstItem="Q1X-HQ-2qs" firstAttribute="trailing" secondItem="s3M-JR-XwE" secondAttribute="trailingMargin" id="WCX-L1-iYt"/>
-                                    <constraint firstItem="Q1X-HQ-2qs" firstAttribute="bottom" secondItem="s3M-JR-XwE" secondAttribute="bottomMargin" id="bUd-N9-BLe"/>
-                                    <constraint firstAttribute="trailingMargin" secondItem="V95-zT-T0U" secondAttribute="trailing" constant="-8" id="eqe-F2-6J5"/>
-                                    <constraint firstItem="V95-zT-T0U" firstAttribute="top" secondItem="s3M-JR-XwE" secondAttribute="topMargin" constant="-8" id="xbx-Yq-xdp"/>
+                                    <constraint firstItem="Q1X-HQ-2qs" firstAttribute="trailing" secondItem="s3M-JR-XwE" secondAttribute="trailingMargin" id="Klu-BH-Z68"/>
+                                    <constraint firstAttribute="trailingMargin" secondItem="V95-zT-T0U" secondAttribute="trailing" constant="-8" id="M4n-84-CET"/>
+                                    <constraint firstItem="Q1X-HQ-2qs" firstAttribute="leading" secondItem="s3M-JR-XwE" secondAttribute="leadingMargin" id="N6L-gk-2e7"/>
+                                    <constraint firstItem="V95-zT-T0U" firstAttribute="leading" secondItem="s3M-JR-XwE" secondAttribute="leadingMargin" constant="-8" id="WeI-8Q-XGm"/>
+                                    <constraint firstItem="V95-zT-T0U" firstAttribute="top" secondItem="s3M-JR-XwE" secondAttribute="topMargin" constant="-8" id="bXK-8y-DSt"/>
+                                    <constraint firstItem="Q1X-HQ-2qs" firstAttribute="top" secondItem="V95-zT-T0U" secondAttribute="bottom" constant="8" id="g63-8a-z2A"/>
+                                    <constraint firstItem="Q1X-HQ-2qs" firstAttribute="top" secondItem="V95-zT-T0U" secondAttribute="bottom" constant="8" id="ne5-wm-nqB"/>
+                                    <constraint firstAttribute="bottomMargin" secondItem="Q1X-HQ-2qs" secondAttribute="bottom" constant="-8" id="qXi-n9-Yvw"/>
                                 </constraints>
-                                <size key="customSize" width="160" height="160"/>
+                                <size key="customSize" width="273" height="260"/>
+                                <connections>
+                                    <outlet property="CharacterNameLabel" destination="Q1X-HQ-2qs" id="PK9-h7-ooL"/>
+                                    <outlet property="characterImageView" destination="V95-zT-T0U" id="Z7O-pl-p1g"/>
+                                </connections>
                             </collectionViewCell>
                         </cells>
                         <connections>
@@ -58,10 +63,6 @@
                         </connections>
                     </collectionView>
                     <navigationItem key="navigationItem" id="16e-eN-Iry"/>
-                    <connections>
-                        <outlet property="characterImageView" destination="V95-zT-T0U" id="UFJ-f1-7XU"/>
-                        <outlet property="characterName" destination="Q1X-HQ-2qs" id="2Rc-qH-rSk"/>
-                    </connections>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="v4u-fL-clt" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
